--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -3,7 +3,7 @@ name: LaunchPadのHexoBlogBuild
   - workflow_dispatch
 jobs:
   buildstatic:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
