--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -21,7 +21,7 @@ jobs:
           npm install -g hexo-cli
           npm install
           hexo generate
-          echo "blog.lp.rdpstudio.top" >> ./public/CNAME
+          echo "blog.lp.rdpstudio.top" > ./public/CNAME
           ls public
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
