--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -3,7 +3,7 @@ name: LaunchPadのHexoBlogBuild
   - workflow_dispatch
 jobs:
   buildstatic:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -11,11 +11,6 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 15.x
-      - name: Cache node modules
-        uses: actions/cache@v1
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
       - name: Install & Build
         run: >
           npm install -g hexo-cli
