--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -1,5 +1,5 @@
 name: LaunchPadのHexoBlogBuild
-'on':
+on:
   - workflow_dispatch
 jobs:
   buildstatic:
@@ -12,7 +12,7 @@ jobs:
         with:
           node-version: 15.x
       - name: Install & Build
-        run: >
+        run: |
           npm install -g hexo-cli
           npm install
           hexo generate
