--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -1,6 +1,9 @@
 name: LaunchPadのHexoBlogBuild
 on:
   - workflow_dispatch
+  push:
+  branches:
+    - main
 jobs:
   buildstatic:
     runs-on: ubuntu-latest
@@ -16,7 +19,7 @@ jobs:
           npm install -g hexo-cli
           npm install
           hexo generate
-          echo "blog.lp.rdpstudio.top" > ./public/CNAME
+          echo "lpblog.rdpstudio.top" > ./public/CNAME
           ls public
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
