--- a/themes/fluid/_config.yml
+++ b/themes/fluid/_config.yml
@@ -657,11 +657,11 @@ post:
   # 评论插件
   # Comment plugin
   comments:
-    enable: false
+    enable: true
     # 指定的插件，需要同时设置对应插件的必要参数
     # The specified plugin needs to set the necessary parameters at the same time
     # Options: utterances | disqus | gitalk | valine | waline | changyan | livere | remark42 | twikoo | cusdis
-    type: disqus
+    type: twikoo
 
 
 #---------------------------
@@ -790,8 +790,8 @@ remark42:
 # Based on Tencent CloudBase
 # See: https://twikoo.js.org
 twikoo:
-  envId:
-  region: ap-shanghai
+  envId: https://twikoo-1-chi.vercel.app
+  region: 
   path: window.location.pathname
 
 # Cusdis
