--- a/themes/fluid/_config.yml
+++ b/themes/fluid/_config.yml
@@ -935,7 +935,7 @@ links:
   # Custom content at the bottom of the links
   custom:
     enable: true
-    content: '<hr><p>在下方留言申请加入我的友链，按如下格式提供信息：</p><ul><li>博客名：Fluid</li><li>简介：Fluid 主题官方博客</li><li>链接：https://hexo.fluid-dev.com</li><li>图片：https://hexo.fluid-dev.com/img/favicon.png</li></ul>'
+    content: '<hr><p>在下方留言申请加入我的友链，按如下格式提供信息：</p><ul><li>名称：启动台の博客</li><li>简介：一个在互联网角落挣扎的小小博客，很小很小。</li><li>链接：https://lpblog.rdpstudio.top/</li><li>图片：https://cravatar.cn/avatar/b07cc9f086c12774120b991c93f63aca</li></ul>'
 
   # 评论插件
   # Comment plugin
