--- a/themes/fluid/_config.yml
+++ b/themes/fluid/_config.yml
@@ -401,7 +401,7 @@ footer:
   content: '
     由强力的 <a href="https://hexo.io" target="_blank" rel="nofollow noopener"><span>Hexo</span></a> 驱动 | 
     <i class="iconfont icon-love"></i>
-    由可爱的 <a href="https://github.com/fluid-dev/hexo-theme-fluid" target="_blank" rel="nofollow noopener"><span>Fluid</span></a> 支持 | 部署于<a href="https://cloudflare.com">Cloudflare</a>与<a href="https://github.com">Github</a> Pages
+    由可爱的 <a href="https://github.com/fluid-dev/hexo-theme-fluid" target="_blank" rel="nofollow noopener"><span>Fluid</span></a> 支持 | 托管于 <a href="https://cloudflare.com">Cloudflare</a> 与 <a href="https://pages.github.com">Github Pages</a>
     <br>
     <span id="bloggeractivetime"></span><br>
     <script src="/hpp/api/getblogeractive"></script>
