--- a/themes/fluid/_config.yml
+++ b/themes/fluid/_config.yml
@@ -26,7 +26,7 @@ apple_touch_icon: https://cravatar.cn/avatar/b07cc9f086c12774120b991c93f63aca
 
 # 浏览器标签页中的标题分隔符，效果： 文章名 - 站点名
 # Title separator in browser tab, eg: article - site
-tab_title_separator: " - "
+tab_title_separator: " || "
 
 # 强制所有链接升级为 HTTPS（适用于图片等资源出现 HTTP 混入报错）
 # Force all links to be HTTPS (applicable to HTTP mixed error)
