--- a/source/manifest.json
+++ b/source/manifest.json
@@ -1,13 +1,13 @@
 {
   "dir": "ltr",
-  "lang": "zh-CN",
+  "lang": "zh",
   "name": "启动台の博客",
   "short_name": "启动台の博客",
   "scope": "/",
-  "display": "browser",
+  "display": "standalone",
   "start_url": "https://lpblog.rdpstudio.top/",
   "background_color": "transparent",
-  "theme_color": "#2f4154",
+  "theme_color": "transparent",
   "description": "挣扎在互联网角落的小小博客，喜欢介绍一些普通的知识",
   "orientation": "any",
   "related_applications": [],
