--- a/source/manifest.json
+++ b/source/manifest.json
@@ -22,6 +22,11 @@
       "src": "images/80x80.png",
       "type": "image/png",
       "sizes": "80x80"
+    },
+    {
+      "src": "images/144x144.png",
+      "type": "image/png",
+      "sizes": "144x144"
     }
   ],
   "screenshots": []
