--- a/themes/fluid/_config.yml
+++ b/themes/fluid/_config.yml
@@ -210,6 +210,8 @@ custom_css:
 # Customize <head> HTML content
 custom_head: |
   <link rel="manifest" href="manifest.json" />
+  <link rel="stylesheet" href="https://npm.elemecdn.com/notyf@3/notyf.min.css">
+  <script src="https://npm.elemecdn.com/notyf@3.10.0/notyf.min.js"></script>
   <script type="module">
    import 'https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate';
    const el = document.createElement('pwa-update');
