--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ timezone: Asia/Shanghai
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
 url: https://lpblog.rdpstudio.top
-permalink: :year/:month/:day/:title/
-#permalink: p/:abbrlink.html
+#permalink: :year/:month/:day/:title/
+permalink: p/:abbrlink.html
 abbrlink:
   alg: crc32
   rep: hex
