--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -27,7 +27,10 @@ jobs:
           publish_dir: ./public
       - name: Update docs abbrlink
         run: |
-          git add .
+          git fetch --all
+          git reset --hard origin/main
+          git reset --hard origin/gh-pages
+          git add ./source/_posts/*
           git diff HEAD --exit-code
           if [ "$EXCODE" != "0" ]; then  
              "No changes to commit!"
