--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -32,7 +32,8 @@ jobs:
           rm -f package-lock.json
           git add source
           git diff HEAD --exit-code
-          if git diff HEAD --exit-code then
+          if [ git diff HEAD --exit-code ]
+          then
               echo "No changes to commit!"
               exit 0
           else
